# kaminpar-rs

./: .gitmodules  Cargo.toml  README.md  build.rs
include/: kaminpar_wrapper.h
src/: kaminpar_wrapper.cc  lib.rs
